kubernetes-yaml/predict-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predict-microservice
  labels:
    app: predict
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: predict
  template:
    metadata:
      labels:
        app: predict
    spec:
      containers:
      - name: predict-container
        image: anismahmahi/predict_micro_service:latest  # Replace with your actual Docker image and tag
        ports:
        - containerPort: 5000  # Adjust the port as needed
        # Add any environment variables or volume mounts if necessary
      # Add more containers or volumes if needed
# ---
