kubernetes-yaml/preprocess-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preprocess-microservice
  labels:
    app: preprocess
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: preprocess
  template:
    metadata:
      labels:
        app: preprocess
    spec:
      containers:
      - name: preprocess-container
        image: anismahmahi/preprocess_micro_service:latest  # Replace with your actual Docker image and tag
        ports:
        - containerPort: 5001  # Adjust the port as needed
        # Add any environment variables or volume mounts if necessary
      # Add more containers or volumes if needed
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: preprocess-service
# spec:
#   selector:
#     app: preprocess
#   ports:
#     - protocol: TCP
#       port: 81  # Expose the service on this port
#       targetPort: 8081  # Forward traffic to this container port
#   type: LoadBalancer  # Use NodePort, ClusterIP, or LoadBalancer as per your environment
