kubernetes-yaml/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-microservice
  labels:
    app: ui
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui-container
        image: anismahmahi/front_micro_service:latest  # Replace with your actual Docker image and tag
        ports:
        - containerPort: 8501  # Adjust the port as needed
        # Add any environment variables or volume mounts if necessary
      # Add more containers or volumes if needed
---
