kubernetes-yaml/predict-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: predict-service
spec:
  selector:
    app: predict
  ports:
    - protocol: TCP
      port: 5000  # Expose the service on this port
      targetPort: 5000  # Forward traffic to this container port
  type: ClusterIP  # Use NodePort, ClusterIP, or LoadBalancer as per your environment
