kubernetes-yaml/preprocess-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: preprocess-service
spec:
  selector:
    app: preprocess
  ports:
    - protocol: TCP
      port: 5001  # Expose the service on this port
      targetPort: 5001  # Forward traffic to this container port
  type: ClusterIP  # Use NodePort, ClusterIP, or LoadBalancer as per your environment
